<resources>
    <string name="app_name">ARCoreMeasureForAll</string>
    <string name="alert_message">To prepare your device, please install the ARCore Service.</string>
    <string name="alert_support">Support Devices:
\n•  Google Pixel and Pixel XL
\n•  Samsung Galaxy S8 (SM-G950U, SM-G950N, SM-G950F, SM-G950FD, SM-G950W, SM-G950U1)
\nhttps://developers.google.com/ar/discover/</string>
    <string name="alert_download_for_all">Download ARCore Service for all.</string>
    <string name="alert_download_link_for_all">https://github.com/tomthecarrot/arcore-for-all/raw/service-mod/service-mod/arcore-preview-modified.apk</string>
    <string name="alert_download_link_for_all_info">https://github.com/tomthecarrot/arcore-for-all
        \nhttps://github.com/tomthecarrot/arcore-for-all/tree/service-mod</string>
    <string name="alert_download">Download ARCore Service.</string>
    <string name="alert_download_link">https://github.com/google-ar/arcore-android-sdk/releases/download/sdk-preview/arcore-preview.apk</string>
    <string name="alert_info">More info</string>
    <string name="alert_info_link">https://developers.google.com/ar/develop/java/getting-started</string>
    <string name="alert_do_not_show">I have downloaded and installed ARCore Service, do not show this alert again.</string>
    <string name="ok">OK</string>

    <string name="need_permission">Camera permission is needed to run this application</string>

    <string name="not_support">This device does not support AR. </string>

    <string name="action_1">Delete</string>
    <string name="action_2">Set as first</string>
    <string name="action_3">Horizontal move</string>
    <string name="action_4">Vertical move</string>

    <string name="action_1_toast">Remove this cube.</string>
    <string name="action_2_toast">Reorder and set this cube to the first.</string>
    <string name="action_3_toast">Move on x and z axis.</string>
    <string name="action_4_toast">Move on y axis.</string>

</resources>
