<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_message"
        style="@style/label"
        android:paddingTop="24dp"
        android:text="@string/alert_message" />

    <TextView
        android:id="@+id/tv_support"
        style="@style/label.small"
        android:layout_below="@+id/tv_message"
        android:paddingBottom="16dp"
        android:text="@string/alert_support"
        android:textColor="@color/gray" />

    <ImageView
        android:id="@+id/iv_line_message"
        style="@style/line"
        android:layout_below="@+id/tv_support" />

    <ImageView
        android:id="@+id/iv_arrow_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_download_link"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tv_download"
        android:paddingRight="16dp"
        android:src="@drawable/ic_action_arrow" />

    <TextView
        android:id="@+id/tv_download"
        style="@style/label"
        android:layout_below="@+id/iv_line_message"
        android:layout_toLeftOf="@+id/iv_arrow_download"
        android:paddingBottom="0dp"
        android:paddingRight="0dp"
        android:paddingTop="16dp"
        android:text="@string/alert_download" />

    <TextView
        android:id="@+id/tv_download_link"
        style="@style/label.small"
        android:layout_below="@+id/tv_download"
        android:layout_toLeftOf="@+id/iv_arrow_download"
        android:paddingBottom="16dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:text="@string/alert_download_link" />

    <ImageView
        android:id="@+id/iv_line_download"
        style="@style/line"
        android:layout_below="@+id/tv_download_link" />


    <ImageView
        android:id="@+id/iv_arrow_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_info_link"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tv_info"
        android:paddingRight="16dp"
        android:src="@drawable/ic_action_arrow" />

    <TextView
        android:id="@+id/tv_info"
        style="@style/label"
        android:layout_below="@+id/iv_line_download"
        android:layout_toLeftOf="@+id/iv_arrow_download"
        android:paddingBottom="0dp"
        android:paddingRight="0dp"
        android:paddingTop="16dp"
        android:text="@string/alert_info" />

    <TextView
        android:id="@+id/tv_info_link"
        style="@style/label.small"
        android:layout_below="@+id/tv_info"
        android:layout_toLeftOf="@+id/iv_arrow_download"
        android:paddingBottom="16dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:text="@string/alert_info_link" />

    <ImageView
        android:id="@+id/iv_line_info"
        style="@style/line"
        android:layout_below="@+id/tv_info_link" />

    <TextView
        android:id="@+id/tv_dontshow"
        style="@style/label.small"
        android:layout_below="@+id/iv_line_info"
        android:drawableLeft="@drawable/selector_cb"
        android:drawablePadding="8dp"
        android:paddingBottom="16dp"
        android:paddingLeft="12dp"
        android:paddingTop="16dp"
        android:text="@string/alert_do_not_show"
        android:textSize="@dimen/typo_medium" />

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dontshow"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="24dp"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:paddingTop="16dp"
        android:text="@string/ok"
        android:textColor="@color/black"
        android:textSize="@dimen/typo_large" />

</RelativeLayout>